cmake_minimum_required(VERSION 3.27)
project(algorithm)

set(CMAKE_CXX_STANDARD 26)

add_executable(algorithm main.cpp
        oj/leetcode/1101-1200/1157/1157_1.cpp
        oj/leetcode/1101-1200/1157/1157_2.cpp
        oj/leetcode/301-400/303/303.cpp
        oj/leetcode/1-100/1/1.cpp
        oj/leetcode/1-100/2/2.cpp
        oj/leetcode/1-100/3/3.cpp
        oj/leetcode/1901-2000/1969/1969.cpp
        oj/leetcode/1601-1700/1669/1669.cpp
        oj/leetcode/2601-2700/2671/2671.cpp
        oj/leetcode/201-300/206/206.cpp
        oj/leetcode/601-700/699/699_1.cpp
        oj/leetcode/601-700/699/699_2.cpp
        oj/leetcode/2501-2600/2549/2549.cpp
        oj/leetcode/101-200/143/143_1.cpp
        oj/leetcode/101-200/143/143_2.cpp
        oj/leetcode/2401-2500/2407/2407.cpp
        oj/leetcode/201-300/287/287.cpp
        oj/leetcode/301-400/322/322.cpp
        oj/leetcode/501-600/518/518.cpp
        oj/leetcode/3001-3100/3090/3090.cpp
        oj/leetcode/3001-3100/3091/3091.cpp
        oj/leetcode/3001-3100/3092/3092.cpp
        oj/leetcode/3001-3100/3093/3093.cpp
        oj/leetcode/401-500/442/442.cpp
        oj/leetcode/2501-2600/2569/2569.cpp
        oj/leetcode/3001-3100/3072/3072.cpp
        oj/leetcode/1-100/41/41.cpp
        oj/leetcode/2601-2700/2642/2642_1.cpp
        oj/leetcode/2601-2700/2642/2642_2.cpp
        oj/leetcode/2901-3000/2916/2916.cpp
        oj/leetcode/2501-2600/2580/2580.cpp
        oj/leetcode/701-800/713/713.cpp
        oj/leetcode/2901-3000/2958/2958.cpp
        oj/leetcode/1901-2000/1997/1997.cpp
        oj/leetcode/2901-3000/2908/2908.cpp
        oj/leetcode/2901-3000/2962/2962.cpp
        oj/leetcode/2901-3000/2977/2977.cpp
        oj/leetcode/3001-3100/3083/3083.cpp
        oj/leetcode/2201-2300/2286/2286.cpp
        oj/leetcode/2901-3000/2952/2952.cpp
        oj/leetcode/901-1000/992/992.cpp
        oj/leetcode/301-400/331/331.cpp
        oj/leetcode/3001-3100/3099/3099.cpp
        oj/leetcode/3001-3100/3100/3100.cpp
        oj/leetcode/3101-3200/3101/3101.cpp
        oj/leetcode/2801-2900/2810/2810.cpp
        oj/leetcode/1-100/58/58.cpp
        oj/leetcode/2401-2500/2444/2444_1.cpp
        oj/leetcode/2401-2500/2444/2444_2.cpp
        oj/leetcode/2601-2700/2617/2617.cpp
        oj/leetcode/3001-3100/3077/3077.cpp
        oj/leetcode/3001-3100/3041/3041.cpp
        oj/leetcode/201-300/205/205.cpp
        oj/leetcode/801-900/894/894.cpp
        oj/leetcode/3001-3100/3082/3082_1.cpp
        oj/leetcode/3001-3100/3082/3082_2.cpp
        oj/leetcode/1301-1400/1379/1379.cpp
        oj/leetcode/1-100/79/79.cpp
        oj/leetcode/3001-3100/3098/3098_1.cpp
        oj/leetcode/1601-1700/1614/1614.cpp
        oj/leetcode/2101-2200/2192/2192.cpp
        oj/leetcode/2901-3000/2930/2930.cpp
        oj/leetcode/3001-3100/3098/3098_2.cpp
        oj/leetcode/1001-1100/1026/1026.cpp
        oj/leetcode/1501-1600/1544/1544.cpp
        oj/leetcode/2901-3000/2954/2954.cpp
        oj/leetcode/1201-1300/1249/1249.cpp
        oj/leetcode/1401-1500/1483/1483.cpp
        oj/leetcode/1501-1600/1600/1600.cpp
        oj/leetcode/601-700/678/678.cpp
        oj/leetcode/3001-3100/3042/3042_1.cpp
        oj/leetcode/3101-3200/3105/3105.cpp
        oj/leetcode/3101-3200/3106/3106.cpp
        oj/leetcode/3101-3200/3107/3107.cpp
        oj/leetcode/3101-3200/3108/3108.cpp
        oj/leetcode/401-500/462/462.cpp
        oj/leetcode/3001-3100/3042/3042_2.cpp
        oj/leetcode/1601-1700/1700/1700_1.cpp
        oj/leetcode/1601-1700/1700/1700_2.cpp
        oj/leetcode/2001-2100/2009/2009.cpp
        oj/leetcode/2401-2500/2448/2448.cpp
        oj/leetcode/2201-2300/2276/2276.cpp
        oj/leetcode/2501-2600/2563/2563.cpp
        oj/leetcode/2501-2600/2529/2529.cpp
        oj/leetcode/2001-2100/2073/2073.cpp
        oj/leetcode/1701-1800/1703/1703.cpp
        oj/leetcode/1701-1800/1702/1702.cpp
        oj/leetcode/901-1000/950/950.cpp
        oj/leetcode/401-500/402/402.cpp
        oj/leetcode/1701-1800/1766/1766_1.cpp
        oj/leetcode/1701-1800/1766/1766_2.cpp
        oj/leetcode/1401-1500/1478/1478.cpp
        oj/leetcode/2901-3000/2923/2923.cpp
        oj/leetcode/1-100/42/42.cpp
        oj/leetcode/2901-3000/2968/2968_1.cpp
        oj/leetcode/2901-3000/2968/2968_2.cpp
        oj/leetcode/2901-3000/2924/2924_1.cpp
        oj/leetcode/2901-3000/2924/2924_2.cpp
        oj/leetcode/1-100/85/85_1.cpp
        oj/leetcode/1-100/85/82_2.cpp
        oj/leetcode/2901-3000/2967/2967_1.cpp
        oj/leetcode/2901-3000/2967/2967_2.cpp
        oj/leetcode/1601-1700/1685/1685.cpp
        oj/leetcode/3101-3200/3110/3110.cpp
        oj/leetcode/3101-3200/3111/3111.cpp
        oj/leetcode/3101-3200/3112/3112.cpp
        oj/leetcode/3101-3200/3113/3113_1.cpp
        oj/leetcode/3101-3200/3113/3113_2.cpp
        oj/leetcode/3101-3200/3114/3114.cpp
        oj/leetcode/3101-3200/3115/3115.cpp
        oj/leetcode/3101-3200/3116/3116_1.cpp
        oj/leetcode/3101-3200/3116/3116_2.cpp
        oj/leetcode/701-800/705/705.cpp
        oj/leetcode/401-500/404/404.cpp
        oj/leetcode/701-800/706/706.cpp
        oj/leetcode/101-200/129/129.cpp
        oj/leetcode/2101-2200/2121/2121.cpp
        oj/leetcode/3101-3200/3117/3117_1.cpp
        oj/leetcode/3001-3100/3097/3097_1.cpp
        oj/leetcode/3001-3100/3097/3097_2.cpp
        oj/leetcode/3101-3200/3117/3117_2.cpp
        oj/leetcode/901-1000/924/924.cpp
        oj/leetcode/601-700/623/623.cpp
        oj/leetcode/2601-2700/2615/2615.cpp
        oj/leetcode/901-1000/988/988.cpp
        oj/leetcode/901-1000/928/928.cpp
        oj/leetcode/2001-2100/2007/2007.cpp
        oj/leetcode/401-500/463/463.cpp
        oj/leetcode/1101-1200/1131/1131.cpp
        oj/leetcode/101-200/200/200.cpp
        oj/leetcode/1801-1900/1883/1883.cpp
        oj/leetcode/3101-3200/3102/3102_1.cpp
        oj/leetcode/1-100/39/39.cpp
        oj/leetcode/1901-2000/1992/1992.cpp
        oj/leetcode/201-300/204/204.cpp
        oj/leetcode/3101-3200/3102/3102_2.cpp
        oj/leetcode/1-100/28/28.cpp
        oj/leetcode/1901-2000/1971/1971.cpp
        oj/leetcode/201-300/216/216.cpp
        oj/leetcode/2501-2600/2584/2584.cpp
        oj/leetcode/3101-3200/3120/3120.cpp
        oj/leetcode/3101-3200/3121/3121.cpp
        oj/leetcode/3101-3200/3123/3123.cpp
        oj/leetcode/3101-3200/3122/3122.cpp
        oj/leetcode/1301-1400/1392/1392.cpp
        oj/leetcode/301-400/377/377.cpp
        oj/leetcode/701-800/752/752.cpp
        oj/leetcode/901-1000/952/952.cpp
        oj/leetcode/301-400/310/310.cpp
        oj/leetcode/1001-1100/1052/1052.cpp
        oj/leetcode/1601-1700/1627/1627.cpp
        oj/leetcode/2301-2400/2385/2385.cpp
        oj/leetcode/1101-1200/1137/1137_1.cpp
        oj/leetcode/1101-1200/1137/1137_2.cpp
        oj/leetcode/1901-2000/1998/1998.cpp
        oj/leetcode/2701-2800/2739/2739_1.cpp
        oj/leetcode/2701-2800/2739/2739_2.cpp
        oj/leetcode/1501-1600/1518/1518_1.cpp
        oj/leetcode/1501-1600/1518/1518_2.cpp
        oj/leetcode/2301-2400/2370/2370.cpp
        oj/leetcode/2701-2800/2709/2709.cpp
        oj/leetcode/1201-1300/1289/1289.cpp
        oj/leetcode/2601-2700/2639/2639.cpp
        oj/leetcode/501-600/514/514_1.cpp
        oj/leetcode/501-600/514/514_2.cpp
        oj/leetcode/701-800/743/743.cpp
        oj/leetcode/801-900/834/834.cpp
        oj/leetcode/1001-1100/1017/1017.cpp
        oj/leetcode/3101-3200/3127/3127.cpp
        oj/leetcode/3101-3200/3128/3128.cpp
        oj/leetcode/3101-3200/3129/3129_1.cpp
        oj/leetcode/3101-3200/3129/3129_2.cpp
        oj/leetcode/3101-3200/3131/3131.cpp
        oj/leetcode/3101-3200/3132/3132.cpp
        oj/leetcode/3101-3200/3133/3133.cpp
        oj/leetcode/701-800/778/778.cpp
        oj/leetcode/3101-3200/3134/3134.cpp
        oj/leetcode/1301-1400/1329/1329.cpp
        oj/leetcode/2901-3000/2997/2997.cpp
        oj/leetcode/2701-2800/2798/2798.cpp
        oj/leetcode/1901-2000/1915/1915.cpp
        oj/leetcode/701-800/787/787.cpp
        oj/leetcode/801-900/882/882.cpp
        oj/leetcode/1901-2000/2000/2000.cpp
        oj/leetcode/2401-2500/2462/2462.cpp
        oj/leetcode/1301-1400/1368/1368.cpp
        oj/leetcode/2401-2500/2441/2441.cpp
        oj/leetcode/801-900/857/857.cpp
        oj/leetcode/1501-1600/1514/1514.cpp
        oj/leetcode/101-200/165/165_1.cpp
        oj/leetcode/1401-1500/1491/1491.cpp
        oj/leetcode/101-200/165/165_2.cpp
        oj/leetcode/1701-1800/1786/1786.cpp
        oj/leetcode/801-900/881/881.cpp
        oj/leetcode/1201-1300/1235/1235.cpp
        oj/leetcode/1901-2000/1976/1976_1.cpp
        oj/leetcode/1901-2000/1976/1976_2.cpp
        oj/leetcode/1601-1700/1652/1652.cpp
        oj/leetcode/201-300/237/237.cpp
        oj/atcoder/abc352/A/a.cpp
        oj/atcoder/abc352/B/b.cpp
        oj/atcoder/abc352/C/c.cpp
        oj/atcoder/abc352/D/d_1.cpp
        oj/atcoder/abc352/D/d_2.cpp
        oj/atcoder/abc352/E/e.cpp
        oj/atcoder/abc352/F/f.cpp
        oj/leetcode/3101-3200/3136/3136.cpp
        oj/leetcode/3101-3200/3137/3137.cpp
        oj/leetcode/3101-3200/3138/3138.cpp
        oj/leetcode/701-800/741/741.cpp
        oj/leetcode/2401-2500/2487/2487.cpp
        oj/leetcode/2201-2300/2203/2203.cpp
        oj/leetcode/2801-2900/2816/2816.cpp
        oj/leetcode/1401-1500/1463/1463.cpp
        oj/leetcode/2501-2600/2503/2503.cpp
        oj/leetcode/2001-2100/2079/2079.cpp
        oj/leetcode/501-600/506/506.cpp
        oj/leetcode/2501-2600/2577/2577.cpp
        oj/leetcode/3001-3100/3075/3075.cpp
        oj/leetcode/2101-2200/2105/2105.cpp
        oj/leetcode/2601-2700/2662/2662.cpp
        oj/leetcode/701-800/786/786_1.cpp
        oj/leetcode/701-800/786/786_2.cpp
        oj/leetcode/2901-3000/2960/2960.cpp
        oj/leetcode/2301-2400/2391/2391.cpp
        oj/leetcode/2301-2400/2373/2373.cpp
        oj/leetcode/1501-1600/1553/1553.cpp
        oj/leetcode/901-1000/994/994.cpp
        oj/leetcode/801-900/861/861.cpp
        oj/leetcode/301-400/373/373.cpp
        oj/leetcode/1201-1300/1219/1219.cpp
        oj/leetcode/2201-2300/2244/2244.cpp
        oj/leetcode/701-800/719/719.cpp
        oj/leetcode/2801-2900/2812/2812.cpp
        oj/leetcode/1901-2000/1953/1953.cpp
        oj/leetcode/1401-1500/1439/1439.cpp
        oj/leetcode/1301-1400/1325/1325.cpp
        oj/leetcode/801-900/826/826.cpp
        oj/leetcode/2001-2100/2040/2040.cpp
        oj/leetcode/2601-2700/2644/2644.cpp
        oj/leetcode/901-1000/979/979.cpp
        oj/leetcode/601-700/668/668.cpp
        oj/leetcode/3001-3100/3068/3068.cpp
        oj/leetcode/1501-1600/1535/1535.cpp
        oj/leetcode/3101-3200/3151/3151.cpp
        oj/leetcode/3101-3200/3152/3152.cpp
        oj/leetcode/3101-3200/3153/3153_1.cpp
        oj/leetcode/3101-3200/3153/3153_2.cpp
        oj/leetcode/3101-3200/3154/3154_1.cpp
        oj/leetcode/3101-3200/3154/3154_2.cpp
        oj/leetcode/1801-1900/1863/1863.cpp
        oj/leetcode/1501-1600/1542/1542.cpp
        oj/leetcode/701-800/793/793.cpp
        oj/leetcode/1-100/78/78.cpp
        oj/leetcode/2701-2800/2769/2769.cpp
        oj/leetcode/1201-1300/1201/1201.cpp
        oj/leetcode/101-200/131/131.cpp
        oj/leetcode/2201-2300/2225/2225.cpp
        oj/leetcode/1501-1600/1539/1539.cpp
        oj/leetcode/2501-2600/2597/2597_1.cpp
        oj/leetcode/2801-2900/2831/2831_1.cpp
        oj/leetcode/2801-2900/2831/2831_2.cpp
        oj/leetcode/2501-2600/2597/2597_2.cpp
        oj/leetcode/1201-1300/1255/1255.cpp
        oj/leetcode/1601-1700/1673/1673.cpp
        oj/leetcode/101-200/140/140.cpp
        oj/leetcode/2901-3000/2903/2903.cpp
        oj/leetcode/2801-2900/2861/2861.cpp
        oj/leetcode/1701-1800/1738/1738.cpp
        oj/leetcode/501-600/552/552.cpp
        oj/leetcode/3101-3200/3158/3158.cpp
        oj/leetcode/3101-3200/3159/3159.cpp
        oj/leetcode/3101-3200/3160/3160.cpp
        oj/leetcode/3101-3200/3161/3161.cpp
        oj/leetcode/3101-3200/3162/3162.cpp
        oj/leetcode/3101-3200/3164/3164.cpp
        oj/leetcode/3101-3200/3163/3163.cpp
        oj/leetcode/1601-1700/1608/1608.cpp
        oj/leetcode/2001-2100/2028/2028.cpp
        oj/leetcode/3101-3200/3165/3165.cpp
        oj/leetcode/2901-3000/2951/2951.cpp
        oj/leetcode/1201-1300/1208/1208.cpp
        oj/leetcode/1-100/76/78_1.cpp
        oj/leetcode/1-100/76/76_2.cpp
        oj/leetcode/1401-1500/1404/1404.cpp
        oj/leetcode/2901-3000/2981/2981_1.cpp
        oj/leetcode/1401-1500/1442/1442_1.cpp
        oj/leetcode/2901-3000/2982/2982_1.cpp
        oj/leetcode/2901-3000/2981/2981_2.cpp
        oj/leetcode/2901-3000/2982/2982_2.cpp
        oj/leetcode/1401-1500/1442/1442_2.cpp
        oj/leetcode/201-300/260/260.cpp
        oj/leetcode/2901-3000/2965/2965.cpp
        oj/leetcode/2501-2600/2537/2537.cpp
        oj/leetcode/2901-3000/2928/2928.cpp
        oj/leetcode/501-600/575/575.cpp
        oj/leetcode/301-400/344/344.cpp
        oj/leetcode/3101-3200/3130/3130_1.cpp
        oj/leetcode/3101-3200/3168/3168.cpp
        oj/leetcode/3101-3200/3169/3169.cpp
        oj/leetcode/3101-3200/3170/3170.cpp
        oj/leetcode/3101-3200/3171/3171_1.cpp
        oj/leetcode/2401-2500/2486/2486.cpp
        oj/leetcode/1101-1200/1103/1103.cpp
        oj/leetcode/3101-3200/3130/3130_2.cpp
        oj/leetcode/401-500/409/409.cpp
        oj/leetcode/3001-3100/3067/3067.cpp
        oj/leetcode/1401-1500/1473/1473_1.cpp
        oj/leetcode/1401-1500/1473/1473_2.cpp
        oj/leetcode/2901-3000/2938/2938.cpp
        oj/leetcode/1001-1100/1002/1002.cpp
        oj/leetcode/801-900/846/846.cpp
        oj/leetcode/101-200/198/198.cpp
        oj/leetcode/3001-3100/3038/3038.cpp
        oj/leetcode/601-700/648/648.cpp
        oj/leetcode/201-300/213/213.cpp
        oj/leetcode/501-600/523/523.cpp
        oj/leetcode/3001-3100/3040/3040.cpp
        oj/leetcode/301-400/337/337.cpp
        oj/leetcode/901-1000/974/974.cpp
        oj/leetcode/301-400/312/312.cpp
        oj/leetcode/2501-2600/2560/2560.cpp
        oj/leetcode/3101-3200/3174/3174.cpp
        oj/leetcode/3101-3200/3175/3175.cpp
        oj/leetcode/1001-1100/1051/1051.cpp
        oj/leetcode/3101-3200/3180/3180_1.cpp
        oj/leetcode/3101-3200/3180/3180_1.cpp
        oj/leetcode/3101-3200/3181/3181.cpp
        oj/leetcode/3101-3200/3180/3180_2.cpp
        oj/leetcode/3101-3200/3178/3178.cpp
        oj/leetcode/3101-3200/3179/3179.cpp
        oj/leetcode/3101-3200/3176/3176_1.cpp
        oj/leetcode/1101-1200/1122/1122.cpp
        oj/leetcode/401-500/419/419.cpp
        oj/leetcode/3101-3200/3176/3176_2.cpp
        oj/leetcode/3101-3200/3177/3177.cpp
        oj/leetcode/3101-3200/3176/3176_3.cpp
        oj/leetcode/1-100/75/75.cpp
        oj/leetcode/901-1000/945/945.cpp
        oj/leetcode/2701-2800/2786/2786.cpp
        oj/leetcode/1501-1600/1526/1526.cpp
        oj/leetcode/301-400/307/307_1.cpp
        oj/leetcode/301-400/307/307_2.cpp
        oj/leetcode/2701-2800/2779/2779_1.cpp
        oj/leetcode/501-600/502/502.cpp
        oj/leetcode/2701-2800/2779/2779_2.cpp
        oj/leetcode/3101-3200/3184/3184.cpp
        oj/leetcode/3101-3200/3185/3185.cpp
        oj/leetcode/3101-3200/3186/3186.cpp
        oj/leetcode/3101-3200/3187/3187.cpp
        oj/leetcode/301-400/330/330.cpp
        oj/leetcode/501-600/521/521.cpp
        oj/leetcode/601-700/633/633.cpp
        oj/leetcode/501-600/522/522.cpp
        oj/leetcode/2201-2300/2288/2288.cpp
        oj/leetcode/201-300/218/218.cpp
        oj/leetcode/1401-1500/1482/1482.cpp
        oj/leetcode/2701-2800/2713/2713.cpp
        oj/leetcode/2701-2800/2748/2748.cpp
        oj/leetcode/1501-1600/1552/1552.cpp
        oj/leetcode/501-600/520/520.cpp
        oj/leetcode/1401-1500/1438/1438_1.cpp
        oj/leetcode/1401-1500/1438/1438_2.cpp
        oj/leetcode/3101-3200/3190/3190.cpp
        oj/leetcode/3101-3200/3191/3191.cpp
        oj/leetcode/3101-3200/3192/3192.cpp
        oj/leetcode/3101-3200/3193/3193_1.cpp
        oj/leetcode/3101-3200/3194/3194.cpp
        oj/leetcode/3101-3200/3195/3195.cpp
        oj/leetcode/3101-3200/3196/3196.cpp
        oj/leetcode/3101-3200/3197/3197.cpp
        oj/leetcode/3101-3200/3193/3193_2.cpp
        oj/leetcode/3101-3200/3193/3193_3.cpp
        oj/leetcode/501-600/503/503.cpp
        oj/leetcode/901-1000/995/995_1.cpp
        oj/leetcode/901-1000/995/995_2.cpp
        oj/leetcode/2701-2800/2734/2734.cpp
        oj/leetcode/1701-1800/1791/1791.cpp
        oj/leetcode/2701-2800/2710/2710.cpp
        oj/leetcode/201-300/229/229.cpp
        oj/leetcode/2801-2900/2856/2856.cpp
        oj/leetcode/401-500/494/494.cpp
        oj/leetcode/2001-2100/2065/2065.cpp
        oj/leetcode/1501-1600/1550/1550.cpp
        oj/leetcode/701-800/732/732.cpp
        oj/leetcode/301-400/350/350.cpp
        oj/leetcode/1-100/56/56.cpp
        oj/leetcode/1501-1600/1509/1509.cpp
        oj/leetcode/1-100/57/57.cpp
        oj/leetcode/2101-2200/2181/2181.cpp
        oj/leetcode/901-1000/986/986.cpp
        oj/leetcode/1501-1600/1589/1589.cpp
        oj/leetcode/3101-3200/3200/3200.cpp
        oj/leetcode/3201-3300/3201/3201.cpp
        oj/leetcode/3201-3300/3202/3202.cpp
        oj/leetcode/3201-3300/3203/3203.cpp
        oj/leetcode/3201-3300/3206/3206.cpp
        oj/leetcode/3201-3300/3208/3208.cpp
        oj/leetcode/3201-3300/3207/3207.cpp
        oj/leetcode/3201-3300/3209/3209.cpp
        oj/leetcode/3201-3300/3210/3210.cpp
        oj/leetcode/3201-3300/3211/3211.cpp
        oj/leetcode/3201-3300/3212/3212.cpp
        oj/leetcode/2301-2400/2327/2327_1.cpp
        oj/leetcode/701-800/724/724.cpp
        oj/leetcode/2301-2400/2327/2327_2.cpp
        oj/leetcode/1701-1800/1701/1701.cpp
        oj/leetcode/3201-3300/3248/3248.cpp
        oj/leetcode/3201-3300/3249/3249.cpp
        oj/leetcode/3201-3300/3250/3250.cpp
        oj/leetcode/801-900/860/860.cpp
        oj/leetcode/3201-3300/3223/3223.cpp
        oj/leetcode/1901-2000/1937/1937.cpp
        oj/leetcode/3201-3300/3254/3254.cpp
        oj/leetcode/3201-3300/3255/3255.cpp
        oj/leetcode/501-600/551/551.cpp
        oj/leetcode/201-300/264/264_1.cpp
        oj/leetcode/201-300/264/264_2.cpp
        oj/leetcode/301-400/313/313.cpp
        oj/leetcode/3201-3300/3256/3256.cpp
        oj/leetcode/3201-3300/3257/3257.cpp
        oj/leetcode/3201-3300/3258/3258.cpp
        oj/leetcode/3201-3300/3259/3259.cpp
        oj/leetcode/3201-3300/3260/3260.cpp
        oj/leetcode/3201-3300/3261/3261.cpp
        oj/leetcode/601-700/650/650_1.cpp
        oj/leetcode/601-700/650/650_2.cpp
        oj/leetcode/601-700/650/650_3.cpp
        oj/leetcode/2801-2900/2858/2858.cpp
        oj/leetcode/3201-3300/3241/3241.cpp
        oj/leetcode/1101-1200/1140/1140.cpp
        oj/leetcode/1601-1700/1697/1697.cpp
        oj/leetcode/3001-3100/3007/3007.cpp
        oj/leetcode/601-700/664/664.cpp
        oj/leetcode/1701-1800/1707/1707.cpp
        oj/leetcode/1-100/4/4_1.cpp
        oj/leetcode/401-500/476/476.cpp
        oj/leetcode/1-100/4/4_2.cpp
        oj/leetcode/1801-1900/1851/1851_1.cpp
        oj/leetcode/501-600/592/592.cpp
        oj/leetcode/1-100/9/9.cpp
        oj/leetcode/1801-1900/1851/1851_2.cpp
        oj/leetcode/1801-1900/1847/1847.cpp
        oj/leetcode/3101-3200/3145/3145.cpp
        oj/leetcode/3101-3200/3146/3146.cpp
        oj/leetcode/501-600/564/564.cpp
        oj/leetcode/1-100/13/13.cpp
        oj/leetcode/2701-2800/2747/2747.cpp
        oj/leetcode/3201-3300/3264/3264.cpp
        oj/leetcode/3201-3300/3266/3266.cpp
        oj/leetcode/3201-3300/3265/3265.cpp
        oj/leetcode/3201-3300/3267/3267.cpp
        oj/leetcode/101-200/145/145.cpp
        oj/leetcode/601-700/698/698_1.cpp
        oj/leetcode/601-700/698/698_2.cpp
        oj/leetcode/2901-3000/2940/2940.cpp
        oj/leetcode/601-700/690/690.cpp
        oj/leetcode/501-600/590/590.cpp
        oj/leetcode/1-100/8/8.cpp
        oj/leetcode/801-900/828/828.cpp
        oj/leetcode/901-1000/907/907.cpp
        oj/leetcode/3101-3200/3144/3144.cpp
        oj/leetcode/1901-2000/1905/1905.cpp
        oj/leetcode/1801-1900/1856/1856.cpp
        oj/leetcode/1-100/35/35.cpp
        oj/leetcode/1-100/50/50.cpp
        oj/leetcode/3101-3200/3142/3142.cpp
        oj/leetcode/901-1000/947/947.cpp
        oj/leetcode/1-100/21/21.cpp
        oj/leetcode/1-100/14/14.cpp
        oj/leetcode/2101-2200/2104/2104.cpp
        oj/leetcode/1-100/6/6.cpp
        oj/leetcode/1-100/12/12.cpp
        oj/leetcode/1401-1500/1498/1498.cpp
        oj/leetcode/1-100/10/10.cpp
        oj/leetcode/1-100/45/45.cpp
        oj/leetcode/2001-2100/2022/2022.cpp
        oj/leetcode/1401-1500/1450/1450.cpp
        oj/leetcode/2301-2400/2302/2302.cpp
        oj/leetcode/2001-2100/2024/2024.cpp
        oj/leetcode/1-100/48/48.cpp
        oj/leetcode/1-100/46/46.cpp
        oj/leetcode/1801-1900/1894/1894.cpp
        oj/leetcode/2601-2700/2681/2681.cpp
        oj/leetcode/2701-2800/2708/2708.cpp
        oj/leetcode/1901-2000/1945/1945.cpp
        oj/leetcode/801-900/874/874.cpp
        oj/leetcode/2801-2900/2860/2860.cpp
        oj/leetcode/3201-3300/3270/3270.cpp
        oj/leetcode/3201-3300/3271/3271.cpp
        oj/leetcode/3201-3300/3272/3272.cpp
        oj/leetcode/3201-3300/3273/3273.cpp
        oj/leetcode/3201-3300/3274/3274.cpp
        oj/leetcode/3201-3300/3275/3275.cpp
        oj/leetcode/3201-3300/3277/3277.cpp
        oj/leetcode/2901-3000/2972/2972.cpp
        oj/leetcode/2801-2900/2818/2818.cpp
        oj/leetcode/3201-3300/3217/3217.cpp
        oj/leetcode/1-100/69/69.cpp
        oj/leetcode/1-100/47/47.cpp
        oj/leetcode/201-300/231/231.cpp
        oj/leetcode/201-300/217/217.cpp
        oj/leetcode/901-1000/977/977.cpp
        oj/leetcode/1-100/11/11.cpp
        oj/leetcode/1-100/15/15.cpp
        oj/leetcode/701-800/725/725.cpp
        oj/leetcode/3201-3300/3283/3283.cpp
        oj/leetcode/3201-3300/3280/3280.cpp
        oj/leetcode/3201-3300/3281/3281.cpp
        oj/leetcode/3201-3300/3282/3282.cpp
        oj/leetcode/1901-2000/1942/1942.cpp
        oj/leetcode/1-100/17/17.cpp
        oj/leetcode/1-100/19/19.cpp
        oj/leetcode/2301-2400/2326/2326.cpp
        oj/leetcode/1-100/37/37.cpp
        oj/leetcode/1801-1900/1882/1882.cpp
        oj/leetcode/1801-1900/1801/1801.cpp
        oj/leetcode/1301-1400/1367/1367.cpp
        oj/leetcode/2501-2600/2552/2552_1.cpp
        oj/leetcode/2501-2600/2552/2552_2.cpp
        oj/leetcode/2801-2900/2807/2807.cpp
        oj/leetcode/2701-2800/2763/2763.cpp
        oj/leetcode/2501-2600/2555/2555.cpp
        oj/leetcode/2201-2300/2220/2220.cpp
        oj/leetcode/2701-2800/2763/2763.cpp
        oj/leetcode/2401-2500/2402/2402.cpp
        oj/leetcode/2101-2200/2102/2102.cpp
        oj/leetcode/201-300/295/295.cpp
        oj/leetcode/1801-1900/1825/1825.cpp
        oj/leetcode/2501-2600/2576/2576.cpp
        oj/leetcode/1601-1700/1684/1684.cpp
        oj/leetcode/2201-2300/2281/2281.cpp
        oj/leetcode/3201-3300/3276/3276.cpp
        oj/leetcode/2301-2400/2398/2398_2.cpp
        oj/leetcode/2301-2400/2398/2398_1.cpp
        oj/leetcode/1-100/38/38.cpp
        oj/leetcode/1301-1400/1310/1310.cpp
        oj/leetcode/601-700/691/691.cpp
        oj/leetcode/2401-2500/2419/2419.cpp
        oj/leetcode/2301-2400/2390/2390.cpp
        oj/leetcode/1-100/33/33.cpp
        oj/leetcode/1-100/34/34.cpp
        oj/leetcode/1101-1200/1125/1125.cpp
        oj/leetcode/2801-2900/2848/2848.cpp
        oj/leetcode/1301-1400/1371/1371.cpp
        oj/leetcode/1301-1400/1349/1349.cpp
        oj/leetcode/3201-3300/3285/3285.cpp
        oj/leetcode/3201-3300/3286/3286.cpp
        oj/leetcode/3201-3300/3287/3287.cpp
        oj/leetcode/3201-3300/3288/3288.cpp
        oj/leetcode/3201-3300/3289/3289.cpp
        oj/leetcode/3201-3300/3290/3290.cpp
        oj/leetcode/3201-3300/3291/3291.cpp
        oj/leetcode/3201-3300/3292/3292.cpp
        oj/leetcode/1101-1200/1184/1184.cpp
        oj/leetcode/501-600/539/539.cpp
        oj/leetcode/1-100/88/88.cpp
        oj/leetcode/1-100/100/100.cpp
        oj/leetcode/1401-1500/1411/1411_1.cpp
        oj/leetcode/1401-1500/1411/1411_2.cpp
        oj/leetcode/801-900/815/815.cpp
        oj/leetcode/801-900/884/884.cpp
        oj/leetcode/1-100/27/27.cpp
        oj/leetcode/1401-1500/1434/1434.cpp
        oj/leetcode/2301-2400/2332/2332.cpp
        oj/leetcode/101-200/179/179.cpp
        oj/leetcode/1601-1700/1655/1655.cpp
        oj/leetcode/101-200/101/101.cpp
        oj/leetcode/2401-2500/2414/2414.cpp
        oj/leetcode/1-100/26/26.cpp
        oj/leetcode/1-100/66/66.cpp
        oj/leetcode/201-300/241/241.cpp
        oj/leetcode/2301-2400/2376/2376.cpp
        oj/leetcode/201-300/214/214_1.cpp
        oj/leetcode/201-300/214/214_2.cpp
        oj/leetcode/201-300/214/214_3.cpp
        oj/leetcode/1601-1700/1681/1681.cpp
        oj/leetcode/2301-2400/2374/2374.cpp
        oj/leetcode/1-100/49/49_1.cpp
        oj/leetcode/1-100/49/49_2.cpp
        oj/leetcode/301-400/386/386.cpp
        oj/leetcode/1701-1800/1723/1723.cpp
        oj/leetcode/1601-1700/1659/1659_1.cpp
        oj/leetcode/1601-1700/1659/1659_2.cpp
        oj/leetcode/901-1000/997/997.cpp
        oj/leetcode/3201-3300/3295/3295_1.cpp
        oj/leetcode/3201-3300/3295/3295_2.cpp
        oj/leetcode/1701-1800/1799/1799.cpp
        oj/leetcode/3201-3300/3296/3296.cpp
        oj/leetcode/3201-3300/3297/3297.cpp
        oj/leetcode/3201-3300/3298/3298.cpp
        oj/leetcode/401-500/440/440.cpp
        oj/leetcode/1001-1100/1014/1014.cpp
        oj/leetcode/2701-2800/2707/2707_1.cpp
        oj/leetcode/2701-2800/2707/2707_2.cpp
        oj/leetcode/1901-2000/1931/1931.cpp
        oj/leetcode/2201-2300/2207/2207.cpp
        oj/leetcode/3001-3100/3043/3043_1.cpp
        oj/leetcode/3001-3100/3043/3043_2.cpp
        oj/leetcode/1901-2000/1994/1994_1.cpp
        oj/leetcode/1901-2000/1994/1994_2.cpp
        oj/leetcode/2301-2400/2306/2306_1.cpp
        oj/leetcode/2301-2400/2306/2306_2.cpp
        oj/leetcode/2401-2500/2416/2416.cpp
        oj/leetcode/2501-2600/2535/2535.cpp
        oj/leetcode/701-800/729/729.cpp
        oj/leetcode/2001-2100/2002/2002.cpp
        oj/leetcode/2501-2600/2516/2516.cpp
        oj/leetcode/701-800/731/731.cpp
        oj/leetcode/2501-2600/2572/2572.cpp
        oj/leetcode/601-700/641/641.cpp
        oj/leetcode/401-500/432/432.cpp
        oj/leetcode/3201-3300/3300/3300.cpp
        oj/leetcode/3301-3400/3301/3301.cpp
        oj/leetcode/3301-3400/3302/3302.cpp
        oj/leetcode/3301-3400/3303/3303_1.cpp
        oj/leetcode/3301-3400/3303/3303_2.cpp
        oj/leetcode/3301-3400/3304/3304.cpp
        oj/leetcode/3301-3400/3307/3307.cpp
        oj/leetcode/3301-3400/3305/3305_1.cpp
        oj/leetcode/3301-3400/3306/3306_1.cpp
        oj/leetcode/3301-3400/3305/3305_2.cpp
        oj/leetcode/3301-3400/3306/3306_2.cpp
        oj/leetcode/1401-1500/1494/1494.cpp
        oj/leetcode/901-1000/983/983_1.cpp
        oj/leetcode/901-1000/983/983_2.cpp
        oj/leetcode/1401-1500/1497/1497.cpp
        oj/leetcode/1801-1900/1870/1870.cpp
        oj/leetcode/1301-1400/1331/1331.cpp
        oj/leetcode/1901-2000/1986/1986.cpp
        oj/leetcode/1901-2000/1928/1928.cpp
        oj/leetcode/1501-1600/1590/1590.cpp
        oj/leetcode/1201-1300/1227/1227.cpp
        oj/leetcode/2401-2500/2491/2491.cpp
        oj/leetcode/1801-1900/1879/1879.cpp
        oj/leetcode/2101-2200/2187/2187.cpp
        oj/leetcode/501-600/567/567.cpp
        oj/leetcode/1901-2000/1947/1947.cpp
        oj/leetcode/101-200/134/134.cpp
        oj/leetcode/1801-1900/1813/1813.cpp
        oj/leetcode/3301-3400/3309/3309.cpp
        oj/leetcode/3301-3400/3310/3310.cpp
        oj/leetcode/3301-3400/3311/3311.cpp
        oj/leetcode/3301-3400/3312/3312.cpp
        oj/leetcode/801-900/871/871.cpp
        oj/leetcode/2601-2700/2696/2696.cpp
        oj/leetcode/2101-2200/2172/2172_2.cpp
        oj/leetcode/2101-2200/2172/2172_1.cpp
        oj/leetcode/2101-2200/2172/2172_3.cpp
        oj/leetcode/1901-2000/1963/1963.cpp
        oj/leetcode/1401-1500/1436/1436.cpp
        oj/leetcode/1501-1600/1595/1595_1.cpp
        oj/leetcode/1501-1600/1595/1595_2.cpp
        oj/leetcode/901-1000/921/921.cpp
        oj/leetcode/3101-3200/3171/3171_2.cpp
        oj/leetcode/901-1000/962/962_1.cpp
        oj/leetcode/901-1000/962/962_2.cpp
        oj/leetcode/401-500/464/464.cpp
        oj/leetcode/601-700/638/638.cpp
        oj/leetcode/1501-1600/1545/1545.cpp
        oj/leetcode/1801-1900/1884/1884_1.cpp
        oj/leetcode/1801-1900/1884/1884_2.cpp
        oj/leetcode/3301-3400/3314/3314.cpp
        oj/leetcode/3301-3400/3315/3315.cpp
        oj/leetcode/3301-3400/3316/3316.cpp
        oj/leetcode/2501-2600/2530/2530.cpp
        oj/leetcode/1001-1100/1012/1012.cpp
        oj/leetcode/3301-3400/3317/3317.cpp
        oj/leetcode/2701-2800/2719/2719.cpp
        oj/leetcode/3301-3400/3318/3318.cpp
        oj/leetcode/3301-3400/3319/3319.cpp
        oj/leetcode/3301-3400/3320/3320.cpp
        oj/leetcode/3301-3400/3321/3321.cpp
        oj/leetcode/2801-2900/2801/2801.cpp
        oj/leetcode/2001-2100/2044/2044.cpp
        oj/leetcode/2901-3000/2999/2999.cpp
        oj/leetcode/3301-3400/3324/3324.cpp
        oj/leetcode/3301-3400/3325/3325.cpp
        oj/leetcode/3301-3400/3326/3326.cpp
        oj/leetcode/3301-3400/3327/3327_1.cpp
        oj/leetcode/3301-3400/3327/3327_2.cpp
        oj/leetcode/901-1000/908/908.cpp
        oj/leetcode/1-100/5/5.cpp
        oj/leetcode/901-1000/910/910.cpp
        oj/leetcode/1501-1600/1593/1593.cpp
        oj/leetcode/2501-2600/2583/2583.cpp
        oj/leetcode/2801-2900/2827/2827.cpp
        oj/leetcode/1601-1700/1639/1639.cpp
        oj/leetcode/2601-2700/2641/2641.cpp
        oj/leetcode/901-1000/951/951.cpp
        oj/leetcode/1201-1300/1233/1233.cpp
        oj/leetcode/2401-2500/2458/2458.cpp
        oj/leetcode/3301-3400/3330/3330.cpp
        oj/leetcode/3301-3400/3331/3331.cpp
        oj/leetcode/3301-3400/3332/3332.cpp
        oj/leetcode/3301-3400/3333/3333.cpp
        oj/leetcode/601-700/684/684.cpp
        oj/leetcode/1201-1300/1277/1277_1.cpp
        oj/leetcode/2401-2500/2461/2461.cpp
        oj/leetcode/1201-1300/1277/1277_2.cpp
        oj/leetcode/3301-3400/3334/3334.cpp
        oj/leetcode/3301-3400/3335/3335.cpp
        oj/leetcode/3301-3400/3337/3337.cpp
        oj/leetcode/3301-3400/3336/3336.cpp
        oj/leetcode/601-700/685/685_1.cpp
        oj/leetcode/601-700/685/685_2.cpp
        oj/leetcode/2501-2600/2501/2501.cpp
        oj/leetcode/2601-2700/2684/2684.cpp
        oj/leetcode/1601-1700/1671/1671_1.cpp
        oj/leetcode/1601-1700/1671/1671_2.cpp
        oj/leetcode/2401-2500/2463/2463_1.cpp
        oj/leetcode/2401-2500/2463/2463_2.cpp
        oj/leetcode/1901-2000/1957/1957.cpp
        oj/leetcode/2401-2500/2490/2490.cpp
        oj/leetcode/701-800/796/796.cpp
        oj/leetcode/3301-3400/3340/3340.cpp
        oj/leetcode/3301-3400/3341/3341.cpp
        oj/leetcode/3301-3400/3342/3342.cpp
        oj/leetcode/3301-3400/3343/3343.cpp
        oj/leetcode/1-100/36/36.cpp
        oj/leetcode/3201-3300/3222/3222.cpp
        oj/leetcode/2901-3000/2914/2914.cpp
        oj/leetcode/3001-3100/3011/3011.cpp
        oj/leetcode/2201-2300/2275/2275.cpp
        oj/leetcode/3001-3100/3076/3076.cpp
        oj/leetcode/1801-1900/1829/1829.cpp
        oj/leetcode/3201-3300/3242/3242.cpp
        oj/leetcode/501-600/540/540.cpp
        oj/leetcode/3301-3400/3345/3345.cpp
        oj/leetcode/3301-3400/3349/3349.cpp
        oj/leetcode/3301-3400/3350/3350.cpp
        oj/leetcode/3301-3400/3351/3351.cpp
        oj/leetcode/1501-1600/1547/1547.cpp
        oj/leetcode/3301-3400/3346/3346.cpp
        oj/leetcode/3301-3400/3347/3347.cpp
        oj/leetcode/2601-2700/2601/2601.cpp
        oj/leetcode/2001-2100/2070/2070.cpp
        oj/leetcode/2001-2100/2064/2064.cpp
        oj/leetcode/3301-3400/3352/3352.cpp
        oj/leetcode/3201-3300/3239/3239.cpp
        oj/leetcode/1501-1600/1574/1574.cpp
        oj/leetcode/3201-3300/3240/3240.cpp
        oj/leetcode/801-900/825/825.cpp
        oj/leetcode/801-900/862/862.cpp
        oj/leetcode/601-700/661/661.cpp
        oj/leetcode/3301-3400/3354/3354.cpp
        oj/leetcode/3301-3400/3355/3355.cpp
        oj/leetcode/3301-3400/3356/3356_1.cpp
        oj/leetcode/3301-3400/3356/3356_2.cpp
        oj/leetcode/3201-3300/3244/3244_1.cpp
        oj/leetcode/3201-3300/3244/3244_2.cpp
        oj/leetcode/2201-2300/2257/2257.cpp
        oj/leetcode/3201-3300/3233/3233.cpp
        oj/leetcode/1001-1100/1072/1072.cpp
        oj/leetcode/3201-3300/3238/3238.cpp
        oj/leetcode/1801-1900/1861/1861.cpp
        oj/leetcode/3301-3400/3360/3360.cpp
        oj/leetcode/3301-3400/3361/3361.cpp
        oj/leetcode/3301-3400/3363/3363.cpp
        oj/leetcode/3301-3400/3364/3364.cpp
)